# enchant_cli

./: .actrc  .bumpversion.cfg  .bumpversion.toml  .coverage  .coverage.Mac-mini-di-Emanuele.local.73635.XUbGgpRx  .deptry.toml  .dockerignore  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .pyproject.toml  .trufflehog-excludes.txt  .trufflehog.yml  .yamlfmt  .yamllint  .yamllint.yml  ALL_TESTS_SUMMARY.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CHANGELOG_FIXES.md  CLAUDE.local.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  COMPLETE_TEST_RESULTS.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DHTL_REFACTORING_PLAN.md  DHT_SCRIPTS_CATEGORIZATION.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.prod  Dockerfile.profiles  ENCHANT_README.md  ENHANCEMENT_SUMMARY.md  EPUB_IMPROVEMENTS_COMPLETE.md  EPUB_IMPROVEMENTS_SUMMARY.md  LICENSE  (+132 more)
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: pytest.ini  test_env.py
.github/linters/: .markdown-lint.yml  .mypy.ini  .ruff.toml  .shellcheckrc  .yamllint.yml  pyproject.toml
BACKUPS/: cli_translator_ORIGINAL.py  translation_service_BAK3.py
Cultivation Master by Unknown Author (Weizhi Zuozhe)/: Cultivation Master by Unknown Author (Weizhi Zuozhe) - Chunk_000001.txt  translated_Cultivation Master by Unknown Author (Weizhi Zuozhe).txt
DHT/: README.md  __init__.py  backup_utils.sh  bash_parser.py  bump_version.bat  bump_version.sh  check_summary_output.py  check_workflow_dispatch.sh  cleanup.sh  cleanup_dht.sh  cli.py  ensure_env.sh  extract_functions.py  first_push.sh  fix_final.py  get_errorlogs.sh  get_errorlogs_classify_errors.sh  get_errorlogs_cleanup.sh  get_errorlogs_detect_workflows.sh  get_errorlogs_generate_stats.sh  get_errorlogs_list_saved_logs.sh  get_errorlogs_logs_processing.sh  get_errorlogs_repo_info.sh  get_errorlogs_search_logs.sh  get_errorlogs_show_help.sh  get_errorlogs_utils.sh  get_errorlogs_workflow_logs.sh  get_errorlogs_workflow_type.sh  guard-process.bat  guard-process.sh  install_apache_license.sh  install_uv.bat  install_uv.sh  integrate_process_guardian.py  log_analyzer.py  major_release.bat  major_release.sh  node-wrapper.bat  node-wrapper.sh  process-guardian-watchdog.py  (+42 more)
Local Test by Author/: translated_Local Test by Author.txt
MAKE_EPUB_BAK/: make_epub.py
Returning after cultivating for 20.000 yesrs/: Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 1.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 10.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 100.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 101.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 102.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 103.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 104.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 105.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 106.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 107.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 108.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 109.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 11.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 110.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 111.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 112.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 113.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 114.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 115.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 116.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 117.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 118.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 119.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 12.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 120.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 121.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 122.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 123.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 124.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 125.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 126.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 127.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 128.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 129.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 13.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 130.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 131.txt  Returning After Cultivating for 20,000 Years by Yu Xiaodong (Yu Xiaodong) - Chapter 132.txt  (+153 more)
gitleaks-safe-tool/: PUBLISHING.md  README.md  pyproject.toml
gitleaks-safe-tool/src/gitleaks_safe/: __init__.py  cleanup.py  cli.py  installer.py  utils.py  wrapper.py
(+3062 files in other folders)
