[project]
name = "enchant-book-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "cli-msg>=4.1.0",
    "colorama>=0.4.6",
    "dill>=0.4.0",
    "huggingface-hub>=0.32.2",
    "lm-eval>=0.4.0",
    "log2d>=0.0.18",
    "mlx>=0.25.2",
    "mlx-lm>=0.24.1",
    "mlx-vlm>=0.0.15",
    "multiexit>=1.5.0",
    "numpy>=2.2.6",
    "outlines>=0.1.11",
    "peewee>=3.18.1",
    "pillow>=11.2.1",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "tenacity>=9.1.2",
    "textual>=3.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.52.3",
    "vllm==0.8.5.post1",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
